Update fix layout gaps for header and profile.

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,4 @@
 .header {
-  margin: 0 auto;
   padding: 45px 0 0;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
@@ -7,7 +6,7 @@
 .header__logo {
   max-width: 173px;
   max-height: 33px;
-  padding: 0 0 41px 27px;
+  padding: 0 0 41px;
 }
 
 @media screen and (max-width: 475px) {
